as: Align note section to 4 bytes

gABI specifies that notes should be aligned to 4 bytes in 32-bit objects
and to 8 bytes in 64-bit objects.  As a Linux extension, we support 4
byte alignment in 64-bit objects.  obj_elf_version and sco_id pad note
section to 4 byte alignment:

frag_align (2, 0, 0);

They should set section alignment to 4 bytes.  When dumping note sections,
if section alignment is less than 4, we treate alignment as 4 bytes to
handle note sections with incorrect section alignment.

binutils/

	PR gas/22492
	* readelf.c (process_notes_at): If section alignment is less
	than 4, use 4 byte alignment.

gas/

	PR gas/22492
	* config/obj-elf.c (obj_elf_version): Align note section to 4
	bytes.
	(sco_id): Likewise.